--- a/index.html
+++ b/index.html
@@ -2,127 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/animations.css">
   <title>Document</title>
 </head>
 <style>
+
+  .main {
+    margin: 30px auto;
+    width: 1000px;
+  }
+  .item {
+    float: left;
+    cursor: pointer;
+    -webkit-box-reflect: below 5px -webkit-gradient(linear, left top, left bottom, color-stop(10%,rgba(255, 255, 255, 0.0)), color-stop(80%,rgba(255, 255, 255, 0.10)), color-stop(100%,rgba(255, 255, 255, .3)));
+    margin-bottom: 120px;
+    -webkit-perspective: 1200px;
+  }
+  .item div {
+    margin: 10px 20px;
+    width: 100px;
+    height: 100px;
+    background-color: #666;
+    border-radius: 5px;
+    box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.35), inset 0 -1px 0 rgba(0, 0, 0, .5), inset 0 1px 0 rgba(255, 255, 255, .6);
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform-style: preserve-3d;
+  }
+
+  .item.item-page {
+    margin: 100px 170px 0 ;
+    -webkit-box-reflect: none;
+  }
+
+  .clearfix {
+
+  }
+  .clearfix:after{
+    content:' ';
+    display: block;
+    height: 0;
+    visibility: hidden;
+    clear: both;
+  }
+
+
+
   .animated {
     -webkit-animation-duration: 1s;
     -webkit-animation-fill-mode: both;
   }
 
-  @-webkit-keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      -webkit-transform: translateY(0);
-    }
-    40% {
-      -webkit-transform: translateY(-10px);
-    }
-    60% {
-      -webkit-transform: translateY(-30px);
-    }
+  .animated-page {
+    -webkit-animation-duration: .6s;
+    -webkit-animation-fill-mode: both;
   }
-  @-webkit-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  .none {
+    -webkit-animation: none;
   }
 
-  @-webkit-keyframes fadeOut {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
+  .loop{
+    -webkit-animation-iteration-count: infinite;
   }
 
-  @-webkit-keyframes pulse {
-    0% {
-      -webkit-transform: scale(1);
-    }
-    50% {
-      -webkit-transform: scale(1.1);
-    }
-    100% {
-      -webkit-transform: scale(1);
-    }
+  .linear{
+    -webkit-animation-timing-function: linear;
   }
 
-  @-webkit-keyframes flash{
-    0%, 50%, 100% {
-      opacity: 1;
-    }
-    25%, 75% {
-      opacity: 0;
-    }
-  }
-
-  @-webkit-keyframes shake {
-    0%, 100% {
-      -webkit-transform: translateX(0);
-    }
-    10%, 30%, 50%, 70%, 90% {
-      -webkit-transform: translateX(-10px);
-    }
-    20%, 40%, 60%, 80% {
-      -webkit-transform: translateX(10px);
-    }
-  }
-
-  @-webkit-keyframes swing {
-    20%, 40%, 60%, 80%, 100% {
-      -webkit-transform-origin: top center;
-    }
-    20% {
-      -webkit-transform: rotate(15deg);
-    }
-    40% {
-      -webkit-transform: rotate(-10deg);
-    }
-    60% {
-      -webkit-transform: rotate(5deg);
-    }
-    80% {
-      -webkit-transform: rotate(-5deg);
-    }
-    100% {
-      -webkit-transform: rotate(0deg);
-    }
-  }
-
-  @-webkit-keyframes rotate {
-    100% {
-      -webkit-transform: rotate(-360deg);
-    }
-  }
-
-  @-webkit-keyframes rotatey {
-    100% {
-      -webkit-transform: rotateY(360deg);
-    }
-  }
-  @-webkit-keyframes rotatex {
-    100% {
-      -webkit-transform: rotateX(360deg);
-    }
-  }
-  @-webkit-keyframes page {
-    25%, 75%, 100% {
-      -webkit-transform-origin: top top;
-    }
-    25% {
-      -webkit-transform: rotateX(35deg);
-    }
-    75% {
-      -webkit-transform: rotateX(-35deg);
-    }
-    100% {
-      -webkit-transform: rotateX(0deg);
-    }
-
+  .ease {
+   -webkit-animation-timing-function: ease;
   }
 
   .bounce{
@@ -159,50 +106,107 @@
     -webkit-animation-name: page;
   }
 
-  .main {
-    margin: 30px auto;
-    width: 1000px;
-
+  .moveToLeft {
+    -webkit-animation-name: moveToLeft;
   }
-  .item {
-    float: left;
-    cursor: pointer;
-    -webkit-box-reflect: below 5px -webkit-gradient(linear, left top, left bottom, color-stop(10%,rgba(255, 255, 255, 0.0)), color-stop(80%,rgba(255, 255, 255, 0.10)), color-stop(100%,rgba(255, 255, 255, .3)));
-    margin-bottom: 120px;
+  .moveToRight {
+    -webkit-animation-name: moveToRight;
   }
-  .item div {
-    margin: 10px 20px;
-    width: 100px;
-    height: 100px;
-    background-color: #666;
-    border-radius: 5px;
-    box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.35), inset 0 -1px 0 rgba(0, 0, 0, .5), inset 0 1px 0 rgba(255, 255, 255, .6);
+  .moveToTop{
+    -webkit-animation-name: moveToTop;
+  }
+  .moveToBottom{
+    -webkit-animation-name: moveToBottom;
   }
 
-  .loop{
-    -webkit-animation-iteration-count: infinite;
+  .moveFromLeft{
+    -webkit-animation-name: moveFromLeft;
+  }
+  .moveFromTop{
+    -webkit-animation-name: moveFromTop;
+  }
+  .moveFromBottom{
+    -webkit-animation-name: moveFromBottom;
+  }
+  .moveFromRight{
+    -webkit-animation-name: moveFromRight;
   }
 
-  .linear{
-    -webkit-animation-timing-function: linear;
+  .scaleToDown {
+    -webkit-animation-name: scaleToDown;
+  }
+  .scaleFromDown {
+    -webkit-animation-name: scaleFromDown;
   }
 
-  .clearfix {
-
+  .scaleToUp {
+    -webkit-animation-name: scaleToUp;
   }
-  .clearfix:after{
-    content:' ';
-    display: block;
-    height: 0;
-    visibility: hidden;
-    clear: both;
+  .scaleFromUp{
+    -webkit-animation-name: scaleFromUp;
   }
 
+  .rotateRightSide {
+    -webkit-transform-origin: 0% 50%;
+    -webkit-animation: rotateRightSide .8s both ease-in;
+  }
 
+  .flipToRight {
+    -webkit-transform-origin: 50% 50%;
+    -webkit-animation: flipToRight .5s both ease-in;
+  }
+  .flipFromRight {
+    -webkit-transform-origin: 50% 50%;
+    -webkit-animation: flipFromRight .5s both ease-in;
+  }
 
+  .rotateFall {
+    -webkit-transform-origin: 0% 0%;
+    -webkit-animation: rotateFall 1s both ease-in;
+  }
+
+  .rotateFromPaper {
+    -webkit-transform-origin: 50% 50%;
+    -webkit-animation: rotateFromPaper .5s both ease-in;
+  }
+  .rotateToPaper {
+    -webkit-transform-origin: 50% 50%;
+    -webkit-animation: rotateToPaper .5s both ease-out;
+  }
+
+  .pushFromLeft {
+    -webkit-transform-origin: 0% 50%;
+    -webkit-animation: pushFromLeft .8s both ease;
+  }
+  .pushToLeft {
+    -webkit-transform-origin: 0% 50%;
+    -webkit-animation: pushToLeft .8s both ease;
+  }
+
+  .foldToLeft {
+    -webkit-transform-origin: 100% 50%;
+    -webkit-animation: foldToLeft .7s both ease;
+  }
+  .foldFromLeft {
+    -webkit-transform-origin: 100% 50%;
+    -webkit-animation: foldFromLeft .7s both ease;
+  }
+
+  .cubeToLeft {
+    -webkit-transform-origin: 100% 50%;
+    -webkit-animation: cubeToLeft .6s both ease-in;
+  }
+  .cubeFromLeft {
+    -webkit-transform-origin: 100% 50%;
+    -webkit-animation: cubeFromLeft .6s both ease-in;
+  }
+
+  .test {
+  }
 </style>
 <body>
   <div class="main clearfix">
+    <h2>For animation components</h2>
     <div class="item">
       <div  class="animated bounce loop"></div>
     </div>
@@ -239,7 +243,71 @@
     <div class="item">
       <div class="animated page loop"></div>
     </div>
-
+  </div>
+  <div class="main clearfix">
+    <h2>For turn page</h2>
+    <div class="item item-page">
+      <div class="animated-page ease click-trans" from="moveFromLeft" to="moveToLeft"></div>
+    </div>
+    <div class="item item-page">
+      <div class="animated-page ease click-trans" from="moveFromTop" to="moveToTop"></div>
+    </div>
+    <div class="item item-page">
+      <div class="animated-page ease click-trans"from="moveFromBottom" to="moveToBottom"></div>
+    </div>
+    <div class="item item-page">
+      <div class="animated-page ease click-trans" from="moveFromRight" to="moveToRight"></div>
+    </div>
+    <div class="item item-page">
+      <div class="animated-page ease click-trans" from="scaleFromDown" to="scaleToDown"></div>
+    </div>
+    <div class="item item-page">
+      <div class="animated-page ease click-trans" from="scaleFromUp" to="scaleToUp"></div>
+    </div>
+    <!-- <div class="item item-page" >
+      <div class="rotateRightSide"></div>
+    </div> -->
+    <div class="item item-page">
+      <div class=" click-trans" from="flipFromRight" to="flipToRight"></div>
+    </div>
+    <div class="item item-page">
+      <div class="click-trans" from="none" to="rotateFall"></div>
+    </div>
+    <div class="item item-page">
+      <div class="click-trans" from="rotateFromPaper" to="rotateToPaper"></div>
+    </div>
+    <div class="item item-page">
+      <div class="click-trans" from="pushFromLeft" to="pushToLeft"></div>
+    </div>
+    <div class="item item-page">
+      <div class="click-trans" from="foldFromLeft" to="foldToLeft"></div>
+    </div>
+    <div class="item item-page">
+      <div class="click-trans" from="cubeFromLeft" to="cubeToLeft"></div>
+    </div>
   </div>
 </body>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script>
+  var els = $('.click-trans');
+  els.on('click',trans);
+  els.on('webkitAnimationStart',function(){
+    $(this).off('click',trans);
+  });
+  els.on('webkitAnimationEnd',function(){
+    $(this).on('click',trans);
+  });
+  function trans() {
+    var self = $(this);
+    var fromClass = self.attr('from');
+    var toClass = self.attr('to');
+    if(self.hasClass(fromClass)){
+      self.removeClass(fromClass).addClass(toClass);
+    }else if(self.hasClass(toClass)){
+      self.removeClass(toClass).addClass(fromClass);
+    }else {
+      self.addClass(toClass);
+    }
+  }
+</script>
 </html>
