--- a/css.target.html
+++ b/css.target.html
@@ -45,7 +45,7 @@
     .accordionMenu h2 a:hover,
     .accordionMenu h2 a:active {
       background: #2288dd;
-      background: -webkit-linear-gradient(linear,left top, left bottom, from(#6bb2ff), to(#2288dd));
+      background: -webkit-gradient(linear,left top, left bottom, from(#6bb2ff), to(#2288dd));
       color: #fff;
     }
     .accordionMenu p {
@@ -53,7 +53,7 @@
       height: 0;
       overflow: hidden;
       padding: 0 10px;
-      -webkit-transition: height .5s ease-in;
+      -webkit-transition: height .2s ease-in;
     }
     .accordionMenu :target p {
       height: 100px;
